--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -472,6 +472,77 @@ picture {
   line-height: 1;
 }
 
+/* line 3, src/scss/_macros/_title.scss */
+.c-title {
+  font-size: 40px;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -0.9px;
+  text-align: center;
+  color: #4a4a4a;
+  text-transform: uppercase;
+}
+
+/* line 12, src/scss/_macros/_title.scss */
+.c-title--color {
+  color: #45b8ac;
+  font-weight: bold;
+}
+
+/* line 24, src/scss/_macros/_btn.scss */
+.c-btn {
+  outline: none;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  max-width: 296px;
+  height: 48px;
+  border: 1px solid #44b4a8;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -webkit-border-radius: 0;
+          border-radius: 0;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.25;
+  letter-spacing: 1.1px;
+}
+
+/* line 42, src/scss/_macros/_btn.scss */
+.c-btn--border {
+  background-color: transparent;
+  color: black;
+}
+
+/* line 47, src/scss/_macros/_btn.scss */
+.c-btn--bg {
+  background-color: #44b4a8;
+  -webkit-transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
+/* line 51, src/scss/_macros/_btn.scss */
+.c-btn--bg:hover {
+  background-color: transparent;
+  color: #44b4a8;
+  -webkit-transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  -o-transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+}
+
 /* line 3, src/scss/_components/_footer.scss */
 .footer {
   min-height: 172px;
@@ -522,6 +593,53 @@ picture {
 .footer__wrapper-1 {
   padding-top: 15px;
   padding-bottom: 36px;
+}
+
+/* line 3, src/scss/_components/home/_pre.scss */
+.pre {
+  padding-top: 101px;
+  padding-bottom: 62px;
+  background-color: #f8f8f8;
+}
+
+/* line 8, src/scss/_components/home/_pre.scss */
+.pre__title {
+  padding-bottom: 20px;
+}
+
+/* line 12, src/scss/_components/home/_pre.scss */
+.pre__desc {
+  width: 100%;
+  max-width: 536px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 31px;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 1.45;
+  text-align: center;
+  color: #4a4a4a;
+}
+
+/* line 25, src/scss/_components/home/_pre.scss */
+.pre__btn {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 16px;
+}
+
+/* line 31, src/scss/_components/home/_pre.scss */
+.pre__info {
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: normal;
+  color: #5e5e5e;
+  text-align: center;
+}
+
+/* line 38, src/scss/_components/home/_pre.scss */
+.pre__info span {
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=maps/app.css.map */
