--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -595,6 +595,99 @@ picture {
   padding-bottom: 36px;
 }
 
+/* line 3, src/scss/_components/home/_advantages.scss */
+.advantages {
+  padding-top: 61px;
+  padding-bottom: 60px;
+}
+
+/* line 7, src/scss/_components/home/_advantages.scss */
+.advantages__block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: end;
+  -webkit-justify-content: flex-end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  width: 100%;
+  max-width: -webkit-calc((100% - 30px) / 3);
+  max-width: calc((100% - 30px) / 3);
+  height: 140px;
+  padding-bottom: 16px;
+}
+
+/* line 17, src/scss/_components/home/_advantages.scss */
+.advantages__block-0 {
+  background-color: #45b8ac;
+}
+
+/* line 20, src/scss/_components/home/_advantages.scss */
+.advantages__block-1 {
+  background-color: #26a69a;
+}
+
+/* line 23, src/scss/_components/home/_advantages.scss */
+.advantages__block-2 {
+  background-color: #009688;
+}
+
+/* line 27, src/scss/_components/home/_advantages.scss */
+.advantages__block-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+/* line 32, src/scss/_components/home/_advantages.scss */
+.advantages__block-count {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 7px;
+  font-size: 64px;
+  font-weight: 300;
+  line-height: 0.75;
+  letter-spacing: -1.4px;
+  color: #ffffff;
+}
+
+/* line 42, src/scss/_components/home/_advantages.scss */
+.advantages__block-count span {
+  line-height: 0.75;
+}
+
+/* line 47, src/scss/_components/home/_advantages.scss */
+.advantages__block-desc {
+  padding-top: 7px;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 1.33;
+  letter-spacing: -0.5px;
+  text-align: center;
+  color: #ffffff;
+}
+
 /* line 3, src/scss/_components/home/_pre.scss */
 .pre {
   padding-top: 101px;
