--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,4 +8,5 @@ extends shared/_layout
 block content
   div.body(class != pageClassName)
 
+    include components/home/_advantages
     include components/home/_pre
