--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,4 +46,5 @@
 //@import "_components/header";
 @import "_components/footer";
 
+@import "_components/home/advantages";
 @import "_components/home/pre";
