Home page - create info section - w\ adaptive.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,5 +46,6 @@
 //@import "_components/header";
 @import "_components/footer";
 
+@import "_components/home/info";
 @import "_components/home/advantages";
 @import "_components/home/pre";
