--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -595,6 +595,71 @@ picture {
   padding-bottom: 36px;
 }
 
+/* line 4, src/scss/_components/home/_info.scss */
+.info__wrapper {
+  border-bottom: solid 1px #979797;
+}
+
+/* line 7, src/scss/_components/home/_info.scss */
+.info__wrapper-0 {
+  padding-top: 97px;
+  padding-bottom: 71px;
+}
+
+/* line 11, src/scss/_components/home/_info.scss */
+.info__wrapper-1 {
+  padding-top: 116px;
+  padding-bottom: 94px;
+}
+
+/* line 15, src/scss/_components/home/_info.scss */
+.info__wrapper-2 {
+  padding-top: 38px;
+  padding-bottom: 87px;
+}
+
+/* line 21, src/scss/_components/home/_info.scss */
+.info__block {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/* line 26, src/scss/_components/home/_info.scss */
+.info__block-1 {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -webkit-flex-direction: row-reverse;
+      -ms-flex-direction: row-reverse;
+          flex-direction: row-reverse;
+}
+
+/* line 31, src/scss/_components/home/_info.scss */
+.info__block-left, .info__block-right {
+  width: 50%;
+}
+
+/* line 37, src/scss/_components/home/_info.scss */
+.info__title {
+  padding-bottom: 18px;
+  text-align: left;
+}
+
+/* line 42, src/scss/_components/home/_info.scss */
+.info__desc {
+  width: 100%;
+  max-width: 536px;
+  font-size: 22px;
+  font-weight: 300;
+  line-height: 1.45;
+  color: #4a4a4a;
+}
+
 /* line 3, src/scss/_components/home/_advantages.scss */
 .advantages {
   padding-top: 61px;
