--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,5 +8,6 @@ extends shared/_layout
 block content
   div.body(class != pageClassName)
 
+    include components/home/_info
     include components/home/_advantages
     include components/home/_pre
