--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,6 +8,8 @@ extends shared/_layout
 block content
   div.body(class != pageClassName)
 
+    include components/home/_flexible
     include components/home/_info
     include components/home/_advantages
     include components/home/_pre
+    include components/home/_think
