--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -473,6 +473,221 @@ picture {
 /* line 6, src/scss/_shared/_swiper.scss */
 .swiper-container-think {
   max-width: 100%;
+  height: 346px;
+}
+
+/* line 11, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide {
+  position: relative;
+  width: 600px;
+  height: 272px;
+  padding: 32px 36px 37px 39px;
+  border: solid 1px rgba(68, 163, 153, 0.7);
+  -webkit-transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+  -o-transition: box-shadow 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: box-shadow 0.3s ease-in-out, border-color 0.3s ease-in-out, background-color 0.3s ease-in-out, -webkit-box-shadow 0.3s ease-in-out;
+}
+
+/* line 19, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content {
+  opacity: 1;
+  position: absolute;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px 51px;
+  background-color: #45b8ac;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* line 32, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span {
+  width: 100%;
+  height: 12px;
+  margin-bottom: 15px;
+  background-color: rgba(67, 67, 67, 0.17);
+}
+
+/* line 38, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:nth-of-type(1) {
+  max-width: 185px;
+}
+
+/* line 41, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:nth-of-type(2) {
+  max-width: 154px;
+  margin-bottom: 28px;
+}
+
+/* line 45, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:nth-of-type(3) {
+  max-width: 95%;
+}
+
+/* line 48, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:nth-of-type(4) {
+  max-width: 90%;
+}
+
+/* line 51, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:nth-of-type(5) {
+  max-width: 99px;
+}
+
+/* line 54, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-content span:last-of-type {
+  margin-bottom: 0;
+}
+
+/* line 60, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-active {
+  width: 600px !important;
+  -webkit-box-shadow: 4px 9px 13px 0 #00000028;
+          box-shadow: 4px 9px 13px 0 #00000028;
+  border-color: #ffffff;
+  background-color: #45b8ac;
+  -webkit-transition: border-color 0.4s ease-in-out, background-color 0.4s ease-in-out, -webkit-box-shadow 0.4s ease-in-out;
+  transition: border-color 0.4s ease-in-out, background-color 0.4s ease-in-out, -webkit-box-shadow 0.4s ease-in-out;
+  -o-transition: box-shadow 0.4s ease-in-out, border-color 0.4s ease-in-out, background-color 0.4s ease-in-out;
+  transition: box-shadow 0.4s ease-in-out, border-color 0.4s ease-in-out, background-color 0.4s ease-in-out;
+  transition: box-shadow 0.4s ease-in-out, border-color 0.4s ease-in-out, background-color 0.4s ease-in-out, -webkit-box-shadow 0.4s ease-in-out;
+}
+
+/* line 67, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-active .swiper-slide-content {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-in-out;
+  -o-transition: opacity 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out;
+  -webkit-transition-delay: 0.35s;
+       -o-transition-delay: 0.35s;
+          transition-delay: 0.35s;
+}
+
+/* line 74, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-title {
+  padding-bottom: 16px;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 1.67;
+  letter-spacing: -0.7px;
+  color: #ffffff;
+}
+
+/* line 83, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-desc {
+  padding-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.56;
+  color: #ffffff;
+}
+
+/* line 90, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-circle {
+  overflow: hidden;
+  position: relative;
+  width: 56px;
+  height: 56px;
+  -webkit-border-radius: 100%;
+          border-radius: 100%;
+  border: solid 2px #ffffff;
+}
+
+/* line 98, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-circle img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+/* line 109, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-user {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+/* line 114, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-user > div:nth-of-type(1) {
+  width: 72px;
+}
+
+/* line 117, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-user > div:nth-of-type(2) {
+  width: 100%;
+  max-width: -webkit-calc(100% - 72px);
+  max-width: calc(100% - 72px);
+}
+
+/* line 121, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-user > div:nth-of-type(2) p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.39;
+  color: #ffffff;
+}
+
+/* line 128, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-slide-user > div:nth-of-type(2) span {
+  font-size: 16px;
+  line-height: 1.56;
+  color: #ffffff;
+}
+
+/* line 138, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-pagination {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* line 143, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-pagination-bullet {
+  opacity: 1;
+  width: 16px;
+  height: 16px;
+  margin-left: 6px;
+  margin-top: 6px;
+  background-color: #44a399;
+}
+
+/* line 151, src/scss/_shared/_swiper.scss */
+.swiper-container-think .swiper-pagination-bullet-active {
+  background-color: #ffffff;
 }
 
 /* line 1, src/scss/_shared/_iconFont.scss */
@@ -785,13 +1000,20 @@ picture {
   width: 50%;
 }
 
-/* line 37, src/scss/_components/home/_info.scss */
+/* line 35, src/scss/_components/home/_info.scss */
+.info__block-left img, .info__block-right img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+/* line 43, src/scss/_components/home/_info.scss */
 .info__title {
   padding-bottom: 18px;
   text-align: left;
 }
 
-/* line 42, src/scss/_components/home/_info.scss */
+/* line 48, src/scss/_components/home/_info.scss */
 .info__desc {
   width: 100%;
   max-width: 536px;
