--- a/src/scss/_components/home/_info.scss
+++ b/src/scss/_components/home/_info.scss
@@ -31,6 +31,12 @@
     &-left,
     &-right {
       width: 50%;
+
+      img {
+        display: block;
+        max-width: 100%;
+        height: auto;
+      }
     }
   }
 
