--- a/dest/css/app.css
+++ b/dest/css/app.css
@@ -71,9 +71,10 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   min-height: 100vh;
+  padding-top: 51px;
 }
 
-/* line 39, src/scss/_shared/_main-setting-reset.scss */
+/* line 40, src/scss/_shared/_main-setting-reset.scss */
 body > .body {
   display: -webkit-box;
   display: -webkit-flex;
@@ -94,7 +95,7 @@ body > .body {
           flex: 1 0 auto;
 }
 
-/* line 45, src/scss/_shared/_main-setting-reset.scss */
+/* line 46, src/scss/_shared/_main-setting-reset.scss */
 body > .body--start {
   -webkit-box-pack: start;
   -webkit-justify-content: flex-start;
@@ -102,19 +103,19 @@ body > .body--start {
           justify-content: flex-start;
 }
 
-/* line 52, src/scss/_shared/_main-setting-reset.scss */
+/* line 53, src/scss/_shared/_main-setting-reset.scss */
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-/* line 55, src/scss/_shared/_main-setting-reset.scss */
+/* line 56, src/scss/_shared/_main-setting-reset.scss */
 *:before, *:after {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-/* line 62, src/scss/_shared/_main-setting-reset.scss */
+/* line 63, src/scss/_shared/_main-setting-reset.scss */
 button,
 input,
 optgroup,
@@ -124,36 +125,36 @@ textarea {
   margin: 0;
 }
 
-/* line 72, src/scss/_shared/_main-setting-reset.scss */
+/* line 73, src/scss/_shared/_main-setting-reset.scss */
 button,
 input {
   overflow: visible;
 }
 
-/* line 78, src/scss/_shared/_main-setting-reset.scss */
+/* line 79, src/scss/_shared/_main-setting-reset.scss */
 button[disabled] {
   opacity: 0.55;
   cursor: not-allowed;
 }
 
-/* line 84, src/scss/_shared/_main-setting-reset.scss */
+/* line 85, src/scss/_shared/_main-setting-reset.scss */
 [type="search"] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
-/* line 90, src/scss/_shared/_main-setting-reset.scss */
+/* line 91, src/scss/_shared/_main-setting-reset.scss */
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
-/* line 96, src/scss/_shared/_main-setting-reset.scss */
+/* line 97, src/scss/_shared/_main-setting-reset.scss */
 textarea {
   overflow: auto;
 }
 
-/* line 101, src/scss/_shared/_main-setting-reset.scss */
+/* line 102, src/scss/_shared/_main-setting-reset.scss */
 p,
 h1, h2, h3, h4, h5, h6,
 hr {
@@ -161,36 +162,36 @@ hr {
   padding: 0;
 }
 
-/* line 109, src/scss/_shared/_main-setting-reset.scss */
+/* line 110, src/scss/_shared/_main-setting-reset.scss */
 ul {
   margin: 0;
   padding: 0;
 }
 
-/* line 114, src/scss/_shared/_main-setting-reset.scss */
+/* line 115, src/scss/_shared/_main-setting-reset.scss */
 ul li {
   list-style: none;
 }
 
-/* line 120, src/scss/_shared/_main-setting-reset.scss */
+/* line 121, src/scss/_shared/_main-setting-reset.scss */
 a {
   outline: none;
   text-decoration: none;
 }
 
-/* line 125, src/scss/_shared/_main-setting-reset.scss */
+/* line 126, src/scss/_shared/_main-setting-reset.scss */
 a:hover, a:focus {
   text-decoration: none;
 }
 
-/* line 132, src/scss/_shared/_main-setting-reset.scss */
+/* line 133, src/scss/_shared/_main-setting-reset.scss */
 input[type="text"] {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
 }
 
-/* line 136, src/scss/_shared/_main-setting-reset.scss */
+/* line 137, src/scss/_shared/_main-setting-reset.scss */
 picture {
   display: -webkit-box;
   display: -webkit-flex;
@@ -257,16 +258,34 @@ picture {
 }
 
 /* line 5, src/scss/_shared/_common.scss */
+.nav--header {
+  padding-bottom: 15px;
+}
+
+/* line 8, src/scss/_shared/_common.scss */
+.nav--header .nav__list {
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+/* line 11, src/scss/_shared/_common.scss */
+.nav--header .nav__list-btn {
+  color: #333333;
+}
+
+/* line 16, src/scss/_shared/_common.scss */
 .nav--footer {
   padding-left: 107px;
 }
 
-/* line 8, src/scss/_shared/_common.scss */
+/* line 19, src/scss/_shared/_common.scss */
 .nav--footer .nav__list-btn {
   color: #ffffff;
 }
 
-/* line 13, src/scss/_shared/_common.scss */
+/* line 24, src/scss/_shared/_common.scss */
 .nav__list {
   display: -webkit-box;
   display: -webkit-flex;
@@ -278,13 +297,13 @@ picture {
           align-items: center;
 }
 
-/* line 17, src/scss/_shared/_common.scss */
+/* line 28, src/scss/_shared/_common.scss */
 .nav__list-item {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-/* line 22, src/scss/_shared/_common.scss */
+/* line 33, src/scss/_shared/_common.scss */
 .nav__list-btn {
   display: -webkit-box;
   display: -webkit-flex;
@@ -299,7 +318,7 @@ picture {
   text-transform: uppercase;
 }
 
-/* line 34, src/scss/_shared/_common.scss */
+/* line 45, src/scss/_shared/_common.scss */
 .logo {
   display: -webkit-box;
   display: -webkit-flex;
@@ -311,13 +330,21 @@ picture {
           align-items: flex-start;
 }
 
-/* line 39, src/scss/_shared/_common.scss */
+/* line 50, src/scss/_shared/_common.scss */
 .logo--footer svg {
   width: 171px;
   fill: #fff;
 }
 
-/* line 48, src/scss/_shared/_common.scss */
+/* line 56, src/scss/_shared/_common.scss */
+.logo--header svg {
+  width: 100%;
+  height: 100%;
+  -webkit-filter: drop-shadow(0px 15px 0px rgba(0, 0, 0, 0.05));
+          filter: drop-shadow(0px 15px 0px rgba(0, 0, 0, 0.05));
+}
+
+/* line 66, src/scss/_shared/_common.scss */
 .copyright {
   display: -webkit-box;
   display: -webkit-flex;
@@ -329,20 +356,20 @@ picture {
           align-items: center;
 }
 
-/* line 52, src/scss/_shared/_common.scss */
+/* line 70, src/scss/_shared/_common.scss */
 .copyright p {
   line-height: 1.43;
   letter-spacing: 1px;
   color: #ffffff;
 }
 
-/* line 57, src/scss/_shared/_common.scss */
+/* line 75, src/scss/_shared/_common.scss */
 .copyright p a {
   text-decoration: underline;
   color: #ffffff;
 }
 
-/* line 67, src/scss/_shared/_common.scss */
+/* line 85, src/scss/_shared/_common.scss */
 .subscribe__form {
   overflow: hidden;
   position: relative;
@@ -361,7 +388,7 @@ picture {
   background-color: #ffffff;
 }
 
-/* line 77, src/scss/_shared/_common.scss */
+/* line 95, src/scss/_shared/_common.scss */
 .subscribe__form-icon {
   display: -webkit-box;
   display: -webkit-flex;
@@ -382,13 +409,13 @@ picture {
   height: 100%;
 }
 
-/* line 87, src/scss/_shared/_common.scss */
+/* line 105, src/scss/_shared/_common.scss */
 .subscribe__form-icon .icon-subscribe {
   font-size: 13px;
   color: rgba(74, 74, 74, 0.23);
 }
 
-/* line 93, src/scss/_shared/_common.scss */
+/* line 111, src/scss/_shared/_common.scss */
 .subscribe__form input,
 .subscribe__form button {
   outline: none;
@@ -400,7 +427,7 @@ picture {
   min-height: 100%;
 }
 
-/* line 102, src/scss/_shared/_common.scss */
+/* line 120, src/scss/_shared/_common.scss */
 .subscribe__form input {
   width: 100%;
   max-width: -webkit-calc(100% - 110px);
@@ -440,7 +467,7 @@ picture {
   font-size: 16px;
 }
 
-/* line 115, src/scss/_shared/_common.scss */
+/* line 133, src/scss/_shared/_common.scss */
 .subscribe__form button {
   cursor: pointer;
   display: -webkit-box;
@@ -770,6 +797,117 @@ picture {
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
+/* line 3, src/scss/_components/_header.scss */
+.header {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 67px;
+}
+
+/* line 11, src/scss/_components/_header.scss */
+.header__bg {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 51px;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 15px 0 0 rgba(0, 0, 0, 0.05);
+          box-shadow: 0 15px 0 0 rgba(0, 0, 0, 0.05);
+}
+
+/* line 22, src/scss/_components/_header.scss */
+.header__wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+}
+
+/* line 27, src/scss/_components/_header.scss */
+.header__wrapper-left, .header__wrapper-middle, .header__wrapper-right {
+  min-height: 100%;
+}
+
+/* line 33, src/scss/_components/_header.scss */
+.header__wrapper-left {
+  width: 100%;
+  max-width: 268px;
+}
+
+/* line 38, src/scss/_components/_header.scss */
+.header__wrapper-middle {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  min-width: 1px;
+  max-width: 100%;
+}
+
+/* line 44, src/scss/_components/_header.scss */
+.header__wrapper-right {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-bottom: 15px;
+  width: 100%;
+  max-width: 225px;
+}
+
+/* line 53, src/scss/_components/_header.scss */
+.header__btn {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+/* line 56, src/scss/_components/_header.scss */
+.header__btn-pre {
+  margin-right: 24px;
+  white-space: nowrap;
+  line-height: 1.43;
+  letter-spacing: 1px;
+  color: #333333;
+  text-transform: uppercase;
+}
+
+/* line 65, src/scss/_components/_header.scss */
+.header__btn-login {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  max-width: 97px;
+  height: 28px;
+  background-color: #45b8ac;
+  text-transform: uppercase;
+  font-weight: 500;
+  line-height: 1.43;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+
 /* line 3, src/scss/_components/_footer.scss */
 .footer {
   min-height: 172px;
@@ -858,9 +996,10 @@ picture {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 500px;
+  min-height: 680px;
 }
 
-/* line 24, src/scss/_components/home/_flexible.scss */
+/* line 25, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right {
   position: relative;
   width: 100%;
@@ -868,7 +1007,7 @@ picture {
   max-width: calc(100% - 500px);
 }
 
-/* line 29, src/scss/_components/home/_flexible.scss */
+/* line 30, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right > div {
   position: absolute;
   display: -webkit-box;
@@ -886,7 +1025,7 @@ picture {
   min-height: 100%;
 }
 
-/* line 38, src/scss/_components/home/_flexible.scss */
+/* line 39, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right > div:nth-of-type(1) {
   left: 0;
   width: 60%;
@@ -900,14 +1039,14 @@ picture {
           align-items: flex-start;
 }
 
-/* line 44, src/scss/_components/home/_flexible.scss */
+/* line 45, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right > div:nth-of-type(1) img {
   -webkit-transform: translateX(-50px);
       -ms-transform: translateX(-50px);
           transform: translateX(-50px);
 }
 
-/* line 48, src/scss/_components/home/_flexible.scss */
+/* line 49, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right > div:nth-of-type(2) {
   right: 0;
   width: 60%;
@@ -921,14 +1060,14 @@ picture {
           align-items: flex-end;
 }
 
-/* line 55, src/scss/_components/home/_flexible.scss */
+/* line 56, src/scss/_components/home/_flexible.scss */
 .flexible__wrapper-right > div img {
   display: block;
   max-width: 100%;
   height: auto;
 }
 
-/* line 64, src/scss/_components/home/_flexible.scss */
+/* line 65, src/scss/_components/home/_flexible.scss */
 .flexible__title {
   padding-bottom: 21px;
   font-size: 48px;
@@ -938,12 +1077,12 @@ picture {
   color: #000;
 }
 
-/* line 72, src/scss/_components/home/_flexible.scss */
+/* line 73, src/scss/_components/home/_flexible.scss */
 .flexible__title span {
   font-weight: bold;
 }
 
-/* line 77, src/scss/_components/home/_flexible.scss */
+/* line 78, src/scss/_components/home/_flexible.scss */
 .flexible__desc {
   font-size: 22px;
   font-weight: 300;
