--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -1,5 +1,81 @@
 // HEADER :: START
 
-.header {}
+.header {
+  z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 67px;
+
+  &__bg {
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 51px;
+    background-color: #ffffff;
+    box-shadow: 0 15px 0 0 rgba(#000, 0.05);
+  }
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+    &-left,
+    &-middle,
+    &-right {
+      min-height: 100%;
+    }
+
+    &-left {
+      width: 100%;
+      max-width: 268px;
+    }
+
+    &-middle {
+      flex: 1;
+      min-width: 1px;
+      max-width: 100%;
+    }
+
+    &-right {
+      display: flex;
+      align-items: center;
+      padding-bottom: 15px;
+      width: 100%;
+      max-width: 225px;
+    }
+  }
+
+  &__btn {
+    display: flex;
+
+    &-pre {
+      margin-right: 24px;
+      white-space: nowrap;
+      line-height: 1.43;
+      letter-spacing: 1px;
+      color: #333333;
+      text-transform: uppercase;
+    }
+
+    &-login {
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      max-width: 97px;
+      height: 28px;
+      background-color: #45b8ac;
+      text-transform: uppercase;
+      font-weight: 500;
+      line-height: 1.43;
+      letter-spacing: 1px;
+      color: #ffffff;
+    }
+  }
+}
 
 // HEADER :: END
