--- a/src/scss/_components/home/_flexible.scss
+++ b/src/scss/_components/home/_flexible.scss
@@ -19,6 +19,7 @@
       justify-content: center;
       flex-direction: column;
       width: 500px;
+      min-height: 680px;
     }
 
     &-right {
