--- a/src/scss/_shared/_common.scss
+++ b/src/scss/_shared/_common.scss
@@ -2,6 +2,17 @@
 
 // nav
 .nav {
+  &--header {
+    padding-bottom: 15px;
+
+    .nav__list {
+      justify-content: center;
+
+      &-btn {
+        color: #333333;
+      }
+    }
+  }
   &--footer {
     padding-left: 107px;
 
@@ -39,6 +50,13 @@
     svg {
       width: 171px;
       fill: #fff;
+    }
+  }
+  &--header {
+    svg {
+      width: 100%;
+      height: 100%;
+      filter: drop-shadow(0px 15px 0px rgba(#000, 0.05));
     }
   }
 }
