--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -46,6 +46,7 @@
 @import "_components/header";
 @import "_components/footer";
 
+@import "_components/home/main";
 @import "_components/home/flexible";
 @import "_components/home/info";
 @import "_components/home/advantages";
