--- a/src/scss/_components/_header.scss
+++ b/src/scss/_components/_header.scss
@@ -68,12 +68,20 @@
       width: 100%;
       max-width: 97px;
       height: 28px;
+      border: 1px solid #45b8ac;
       background-color: #45b8ac;
       text-transform: uppercase;
       font-weight: 500;
       line-height: 1.43;
       letter-spacing: 1px;
       color: #ffffff;
+      @include transition(color, background-color);
+
+      &:hover {
+        background-color: transparent;
+        color: #44b4a8;
+        @include transition(color, background-color);
+      }
     }
   }
 }
