--- a/src/scss/_components/home/_main.scss
+++ b/src/scss/_components/home/_main.scss
@@ -2,10 +2,10 @@
 
 .main {
   position: relative;
-  min-height: 100vh;
 
   &__bg {
     z-index: -1;
+    overflow: hidden;
     position: absolute;
     top: 0;
     left: 0;
@@ -21,6 +21,8 @@
 
     &-right {
       img {
+        position: relative;
+        top: -51px;
         display: block;
         max-width: 100%;
         height: auto;
@@ -36,20 +38,25 @@
 
     &-left,
     &-right {
-      width: 50%;
+      //width: 50%;
     }
 
     &-left {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 125px;
+      width: 52%;
+      padding-top: 135px;
       padding-bottom: 24px;
+    }
+
+    &-right {
+      width: 48%;
     }
   }
 
   &__title {
-    padding-bottom: 8px;
+    padding-bottom: 11px;
     font-size: 56px;
     font-weight: 900;
     line-height: 1.14;
@@ -76,7 +83,7 @@
   }
 
   &__info {
-    padding-bottom: 132px;
+    padding-bottom: 140px;
     font-size: 16px;
     line-height: 1.25;
     letter-spacing: normal;
@@ -89,15 +96,11 @@
 
   &__from {
     font-size: 17px;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    line-height: 2;
-    letter-spacing: normal;
     color: #4a4a4a;
 
     &-1 {
       font-weight: bold;
+      letter-spacing: 0.1px;
     }
   }
 }
