--- a/src/pug/components/home/_flexible.pug
+++ b/src/pug/components/home/_flexible.pug
@@ -8,8 +8,8 @@ section#flexible.flexible
         h2.flexible__title!= "<span>HYPER-FLEXIBLE</span> <br>VIRTUAL WORKING"
         p.flexible__desc!= "You’re in control. In this digital age of virtual work, our platform is designed with you in mind - to make it as easy as possible to fit paid, online consulting work around life’s other commitments."
 
-      .flexible__wrapper-right
-        div
+      .flexible__wrapper-right(parallax-js)
+        div(data-stellar-ratio="0.95")
           img(src="./img/info-main.png" srcset="./img/info-main@2x.png 2x" alt="" title="")
 
         div
