--- a/src/scss/_components/home/_flexible.scss
+++ b/src/scss/_components/home/_flexible.scss
@@ -6,6 +6,7 @@
 
 
   &__wrapper {
+    position: relative;
     display: flex;
     min-height: 100vh;
 
@@ -60,6 +61,7 @@
         }
 
         img {
+          position: relative;
           display: block;
           max-width: 100%;
           height: auto;
