What we do page - create all empty tmpl files {*.pug & *.scss} - w\ adaptive.

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -52,3 +52,9 @@
 @import "_components/home/advantages";
 @import "_components/home/pre";
 @import "_components/home/think";
+
+@import "_components/do/main";
+@import "_components/do/stand";
+@import "_components/do/network";
+@import "_components/do/community";
+@import "_components/do/touch";
